--- a/HromadskyiPatrul/Base.lproj/Main.storyboard
+++ b/HromadskyiPatrul/Base.lproj/Main.storyboard
@@ -517,7 +517,7 @@
                             <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UjC-Ec-Nht" userLabel="Video View">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="START" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DxB-Zj-qIu" userLabel="Control Label">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="START" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DxB-Zj-qIu" userLabel="Control Label" customClass="HRPLabel">
                                         <rect key="frame" x="133" y="486" width="55" height="21"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -562,6 +562,10 @@
                             <outletCollection property="gestureRecognizers" destination="jAl-Is-mnm" appends="YES" id="3tU-gl-JBy"/>
                         </connections>
                     </view>
+                    <connections>
+                        <outlet property="_controlLabel" destination="DxB-Zj-qIu" id="kvp-Am-MNR"/>
+                        <outlet property="_timerLabel" destination="BzL-3N-W4p" id="oGy-jp-eCJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxG-qD-MMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="jAl-Is-mnm"/>
